--- a/review_sentiment_analysis.ipynb
+++ b/review_sentiment_analysis.ipynb
@@ -39,33 +39,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l2Jdig5PPDdM"
-      },
-      "source": [
-        "!pip install -q tensorflow_datasets\r\n",
-        "!pip install -q pyyaml h5py"
-      ],
-      "execution_count": 26,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "2ipiq65Roddi"
       },
       "source": [
         "import tensorflow as tf\n",
-        "import tensorflow_datasets as tfds\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "# Make numpy values easier to read.\n",
         "np.set_printoptions(precision=3, suppress=True)\n",
         "\n",
-        "import matplotlib\n",
-        "import json\n",
-        "import pandas as pd"
+        "# Importing defaultdict \n",
+        "from collections import defaultdict"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1107,6 +1094,436 @@
           "output_type": "stream",
           "text": [
             "213/213 [==============================] - 35s 153ms/step - loss: 0.2259 - accuracy: 0.8970\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Qs3JbZp-32X"
+      },
+      "source": [
+        "# Product Rating Estimation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wo6gcIyivXHc",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1610946728733,
+          "user_tz": -330,
+          "elapsed": 2078,
+          "user": {
+            "displayName": "Sriharsha Kotcharlakot",
+            "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GjGoDMldpq-307nKSnLq5ycMB2HMoTz3L0uUgmEFg=s64",
+            "userId": "04233066119008364027"
+          }
+        },
+        "outputId": "079d8bd3-80a3-4bb9-a8c0-6312898758df"
+      },
+      "source": [
+        "item_asins = list(map(str, items_dataframe['asin']))\r\n",
+        "item_titles = list(map(str, items_dataframe['title']))\r\n",
+        "\r\n",
+        "review_asins = list(map(str, reviews_dataframe['asin']))\r\n",
+        "review_bodies = list(map(str, reviews_dataframe['body']))\r\n",
+        "\r\n",
+        "items_dictionary = {}\r\n",
+        "reviews_dictionary = defaultdict(list)\r\n",
+        "\r\n",
+        "for i, j in zip(item_asins, item_titles):\r\n",
+        "  items_dictionary[i] = j\r\n",
+        "\r\n",
+        "for i, j in zip(review_asins, review_bodies):\r\n",
+        "  reviews_dictionary[i].append(j)\r\n",
+        "\r\n",
+        "item_asin = 'B002WTC1NG'\r\n",
+        "\r\n",
+        "results_np_array = new_model.predict(np.array(reviews_dictionary[item_asin]))\r\n",
+        "\r\n",
+        "results = [i[0] for i in results_np_array]\r\n",
+        "\r\n",
+        "print(\"Sentiment Analysis Results, Normalized Results\")\r\n",
+        "\r\n",
+        "normalized_results = []\r\n",
+        "\r\n",
+        "for i in results:\r\n",
+        "  if (i > 0):\r\n",
+        "    normalized_results.append(1)\r\n",
+        "  else:\r\n",
+        "    normalized_results.append(0)\r\n",
+        "\r\n",
+        "for i, j in zip(results, normalized_results):\r\n",
+        "  print(i, '\\t\\t   ', j)\r\n",
+        "\r\n",
+        "estimated_rating = ((sum(normalized_results) / len(normalized_results)) * 5)\r\n",
+        "\r\n",
+        "print(\"Product Name:\", items_dictionary[item_asin])\r\n",
+        "print(\"Estimated Rating:\", estimated_rating)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sentiment Analysis Results, Normalized Results\n",
+            "1.8601956 \t\t    1\n",
+            "4.935422 \t\t    1\n",
+            "6.810992 \t\t    1\n",
+            "2.2435498 \t\t    1\n",
+            "-1.7549433 \t\t    0\n",
+            "9.245282 \t\t    1\n",
+            "1.1793336 \t\t    1\n",
+            "-2.9701366 \t\t    0\n",
+            "9.530838 \t\t    1\n",
+            "-3.4096828 \t\t    0\n",
+            "9.576634 \t\t    1\n",
+            "-1.9304653 \t\t    0\n",
+            "4.211402 \t\t    1\n",
+            "2.0018005 \t\t    1\n",
+            "-0.5342741 \t\t    0\n",
+            "4.405078 \t\t    1\n",
+            "4.6663527 \t\t    1\n",
+            "-2.7833762 \t\t    0\n",
+            "-0.94939756 \t\t    0\n",
+            "-2.207353 \t\t    0\n",
+            "6.110497 \t\t    1\n",
+            "1.1218323 \t\t    1\n",
+            "-1.8603045 \t\t    0\n",
+            "5.121467 \t\t    1\n",
+            "6.4523582 \t\t    1\n",
+            "-2.5298972 \t\t    0\n",
+            "-2.337658 \t\t    0\n",
+            "5.1258235 \t\t    1\n",
+            "0.6134148 \t\t    1\n",
+            "2.24244 \t\t    1\n",
+            "-2.7382278 \t\t    0\n",
+            "5.4295955 \t\t    1\n",
+            "-4.4795485 \t\t    0\n",
+            "3.9550087 \t\t    1\n",
+            "4.588244 \t\t    1\n",
+            "6.599078 \t\t    1\n",
+            "-3.39687 \t\t    0\n",
+            "4.768744 \t\t    1\n",
+            "-1.3451672 \t\t    0\n",
+            "2.0348067 \t\t    1\n",
+            "9.679453 \t\t    1\n",
+            "1.3719339 \t\t    1\n",
+            "2.6258936 \t\t    1\n",
+            "0.47177747 \t\t    1\n",
+            "-2.4146276 \t\t    0\n",
+            "-1.0219309 \t\t    0\n",
+            "8.028047 \t\t    1\n",
+            "-1.5716325 \t\t    0\n",
+            "-3.1849573 \t\t    0\n",
+            "2.999451 \t\t    1\n",
+            "-0.6905644 \t\t    0\n",
+            "0.26553708 \t\t    1\n",
+            "-0.71492386 \t\t    0\n",
+            "2.2181156 \t\t    1\n",
+            "6.5534816 \t\t    1\n",
+            "6.3077207 \t\t    1\n",
+            "1.2655481 \t\t    1\n",
+            "-0.7777164 \t\t    0\n",
+            "3.9248195 \t\t    1\n",
+            "3.8256998 \t\t    1\n",
+            "-0.99757135 \t\t    0\n",
+            "7.530195 \t\t    1\n",
+            "6.620603 \t\t    1\n",
+            "7.0613065 \t\t    1\n",
+            "5.714435 \t\t    1\n",
+            "4.544548 \t\t    1\n",
+            "4.9073796 \t\t    1\n",
+            "6.087944 \t\t    1\n",
+            "8.260019 \t\t    1\n",
+            "8.658251 \t\t    1\n",
+            "5.3971157 \t\t    1\n",
+            "9.865393 \t\t    1\n",
+            "2.7253222 \t\t    1\n",
+            "6.9623723 \t\t    1\n",
+            "8.863878 \t\t    1\n",
+            "-0.782801 \t\t    0\n",
+            "2.697549 \t\t    1\n",
+            "6.3149467 \t\t    1\n",
+            "0.8869028 \t\t    1\n",
+            "5.931098 \t\t    1\n",
+            "2.632831 \t\t    1\n",
+            "5.911718 \t\t    1\n",
+            "2.4411016 \t\t    1\n",
+            "1.090671 \t\t    1\n",
+            "2.483599 \t\t    1\n",
+            "-1.0706224 \t\t    0\n",
+            "2.2777948 \t\t    1\n",
+            "4.132543 \t\t    1\n",
+            "3.191167 \t\t    1\n",
+            "0.68780696 \t\t    1\n",
+            "5.386396 \t\t    1\n",
+            "4.670256 \t\t    1\n",
+            "-1.700246 \t\t    0\n",
+            "4.950112 \t\t    1\n",
+            "5.011498 \t\t    1\n",
+            "3.4135003 \t\t    1\n",
+            "4.7051287 \t\t    1\n",
+            "0.8419986 \t\t    1\n",
+            "1.2194113 \t\t    1\n",
+            "1.9819052 \t\t    1\n",
+            "4.205996 \t\t    1\n",
+            "5.154453 \t\t    1\n",
+            "9.634074 \t\t    1\n",
+            "1.9227122 \t\t    1\n",
+            "-1.0326251 \t\t    0\n",
+            "4.81341 \t\t    1\n",
+            "2.7911022 \t\t    1\n",
+            "4.138802 \t\t    1\n",
+            "7.580368 \t\t    1\n",
+            "-2.386604 \t\t    0\n",
+            "2.1725154 \t\t    1\n",
+            "3.6198757 \t\t    1\n",
+            "5.784655 \t\t    1\n",
+            "5.2222857 \t\t    1\n",
+            "2.5512166 \t\t    1\n",
+            "-2.5408404 \t\t    0\n",
+            "2.9551213 \t\t    1\n",
+            "4.5789294 \t\t    1\n",
+            "-0.8968236 \t\t    0\n",
+            "3.0604286 \t\t    1\n",
+            "3.8195486 \t\t    1\n",
+            "3.4111013 \t\t    1\n",
+            "7.8583875 \t\t    1\n",
+            "5.718406 \t\t    1\n",
+            "-1.9467657 \t\t    0\n",
+            "4.431892 \t\t    1\n",
+            "0.7332123 \t\t    1\n",
+            "8.061155 \t\t    1\n",
+            "0.38109252 \t\t    1\n",
+            "0.60110897 \t\t    1\n",
+            "4.8955245 \t\t    1\n",
+            "2.483004 \t\t    1\n",
+            "1.0860101 \t\t    1\n",
+            "-1.0122926 \t\t    0\n",
+            "6.228975 \t\t    1\n",
+            "4.821975 \t\t    1\n",
+            "8.448346 \t\t    1\n",
+            "6.376674 \t\t    1\n",
+            "1.3021027 \t\t    1\n",
+            "-0.73748535 \t\t    0\n",
+            "2.4678016 \t\t    1\n",
+            "4.4051976 \t\t    1\n",
+            "7.2659397 \t\t    1\n",
+            "5.187381 \t\t    1\n",
+            "6.7519355 \t\t    1\n",
+            "0.8797662 \t\t    1\n",
+            "-1.6678575 \t\t    0\n",
+            "-1.7225052 \t\t    0\n",
+            "2.6118603 \t\t    1\n",
+            "-0.83593225 \t\t    0\n",
+            "2.340622 \t\t    1\n",
+            "5.252585 \t\t    1\n",
+            "-3.1267364 \t\t    0\n",
+            "2.1730003 \t\t    1\n",
+            "5.6353536 \t\t    1\n",
+            "8.187861 \t\t    1\n",
+            "8.770205 \t\t    1\n",
+            "-1.867798 \t\t    0\n",
+            "-0.8980127 \t\t    0\n",
+            "3.4567835 \t\t    1\n",
+            "4.4740806 \t\t    1\n",
+            "5.8729997 \t\t    1\n",
+            "7.24227 \t\t    1\n",
+            "1.0009166 \t\t    1\n",
+            "-0.086681694 \t\t    0\n",
+            "6.648993 \t\t    1\n",
+            "3.9075594 \t\t    1\n",
+            "5.627286 \t\t    1\n",
+            "2.1144109 \t\t    1\n",
+            "4.815969 \t\t    1\n",
+            "3.6383605 \t\t    1\n",
+            "7.704865 \t\t    1\n",
+            "5.718406 \t\t    1\n",
+            "2.8163028 \t\t    1\n",
+            "6.763407 \t\t    1\n",
+            "4.3178887 \t\t    1\n",
+            "4.91314 \t\t    1\n",
+            "6.9717984 \t\t    1\n",
+            "6.1667533 \t\t    1\n",
+            "7.4022975 \t\t    1\n",
+            "8.632125 \t\t    1\n",
+            "6.504805 \t\t    1\n",
+            "5.718406 \t\t    1\n",
+            "0.97725856 \t\t    1\n",
+            "4.037252 \t\t    1\n",
+            "-1.0670757 \t\t    0\n",
+            "-0.40034726 \t\t    0\n",
+            "2.9642825 \t\t    1\n",
+            "4.293529 \t\t    1\n",
+            "5.5578084 \t\t    1\n",
+            "-1.7246525 \t\t    0\n",
+            "-3.7193975 \t\t    0\n",
+            "7.030461 \t\t    1\n",
+            "4.922622 \t\t    1\n",
+            "1.7482598 \t\t    1\n",
+            "-0.7042426 \t\t    0\n",
+            "8.809046 \t\t    1\n",
+            "3.80551 \t\t    1\n",
+            "-0.76270866 \t\t    0\n",
+            "5.649574 \t\t    1\n",
+            "-0.22063202 \t\t    0\n",
+            "-3.36798 \t\t    0\n",
+            "3.9899545 \t\t    1\n",
+            "0.14268951 \t\t    1\n",
+            "-2.0207741 \t\t    0\n",
+            "1.9841868 \t\t    1\n",
+            "2.330316 \t\t    1\n",
+            "-0.6168594 \t\t    0\n",
+            "-4.0072765 \t\t    0\n",
+            "-2.1621096 \t\t    0\n",
+            "0.27725983 \t\t    1\n",
+            "3.5474558 \t\t    1\n",
+            "4.377421 \t\t    1\n",
+            "-0.2007153 \t\t    0\n",
+            "2.7131786 \t\t    1\n",
+            "-2.181547 \t\t    0\n",
+            "-0.8479932 \t\t    0\n",
+            "1.7958796 \t\t    1\n",
+            "0.012586968 \t\t    1\n",
+            "-1.618136 \t\t    0\n",
+            "0.6249252 \t\t    1\n",
+            "2.13168 \t\t    1\n",
+            "6.936462 \t\t    1\n",
+            "-2.3985927 \t\t    0\n",
+            "4.7537665 \t\t    1\n",
+            "3.9227908 \t\t    1\n",
+            "1.9925178 \t\t    1\n",
+            "7.7336164 \t\t    1\n",
+            "2.2056537 \t\t    1\n",
+            "4.91723 \t\t    1\n",
+            "1.0706495 \t\t    1\n",
+            "3.262414 \t\t    1\n",
+            "-0.3134369 \t\t    0\n",
+            "0.29599708 \t\t    1\n",
+            "10.094004 \t\t    1\n",
+            "-0.5162568 \t\t    0\n",
+            "4.107466 \t\t    1\n",
+            "5.2767444 \t\t    1\n",
+            "4.628452 \t\t    1\n",
+            "4.0851607 \t\t    1\n",
+            "2.1436403 \t\t    1\n",
+            "4.1887364 \t\t    1\n",
+            "0.26373398 \t\t    1\n",
+            "-1.5702044 \t\t    0\n",
+            "3.6267736 \t\t    1\n",
+            "-0.500423 \t\t    0\n",
+            "-0.90768653 \t\t    0\n",
+            "2.6045465 \t\t    1\n",
+            "2.76129 \t\t    1\n",
+            "7.5198913 \t\t    1\n",
+            "1.9787567 \t\t    1\n",
+            "9.236577 \t\t    1\n",
+            "5.1858816 \t\t    1\n",
+            "4.2918286 \t\t    1\n",
+            "1.4944195 \t\t    1\n",
+            "2.4388988 \t\t    1\n",
+            "-0.76175034 \t\t    0\n",
+            "4.2134843 \t\t    1\n",
+            "1.3305826 \t\t    1\n",
+            "-1.5410198 \t\t    0\n",
+            "4.5100884 \t\t    1\n",
+            "2.6294415 \t\t    1\n",
+            "4.7618785 \t\t    1\n",
+            "5.246661 \t\t    1\n",
+            "7.3045063 \t\t    1\n",
+            "5.1322217 \t\t    1\n",
+            "3.0331533 \t\t    1\n",
+            "3.1156516 \t\t    1\n",
+            "4.9992557 \t\t    1\n",
+            "4.6794467 \t\t    1\n",
+            "4.4308896 \t\t    1\n",
+            "5.2876105 \t\t    1\n",
+            "-3.4914217 \t\t    0\n",
+            "7.9800115 \t\t    1\n",
+            "1.5834416 \t\t    1\n",
+            "4.2171035 \t\t    1\n",
+            "4.7579675 \t\t    1\n",
+            "1.7081739 \t\t    1\n",
+            "3.7240942 \t\t    1\n",
+            "4.6582456 \t\t    1\n",
+            "6.4075828 \t\t    1\n",
+            "-1.5079919 \t\t    0\n",
+            "5.5043907 \t\t    1\n",
+            "0.836998 \t\t    1\n",
+            "6.85622 \t\t    1\n",
+            "4.953874 \t\t    1\n",
+            "7.6600537 \t\t    1\n",
+            "-1.964279 \t\t    0\n",
+            "0.9688425 \t\t    1\n",
+            "1.3742555 \t\t    1\n",
+            "-0.67188585 \t\t    0\n",
+            "5.6582856 \t\t    1\n",
+            "3.5048623 \t\t    1\n",
+            "3.785722 \t\t    1\n",
+            "4.293529 \t\t    1\n",
+            "4.6706977 \t\t    1\n",
+            "-1.7209424 \t\t    0\n",
+            "3.7885776 \t\t    1\n",
+            "5.5484147 \t\t    1\n",
+            "6.2245507 \t\t    1\n",
+            "-1.5864524 \t\t    0\n",
+            "6.8609695 \t\t    1\n",
+            "5.549582 \t\t    1\n",
+            "-0.37764376 \t\t    0\n",
+            "3.1156516 \t\t    1\n",
+            "4.811191 \t\t    1\n",
+            "6.4269986 \t\t    1\n",
+            "3.6448922 \t\t    1\n",
+            "5.3756065 \t\t    1\n",
+            "2.9448562 \t\t    1\n",
+            "4.2567077 \t\t    1\n",
+            "6.094472 \t\t    1\n",
+            "4.282027 \t\t    1\n",
+            "10.605197 \t\t    1\n",
+            "-3.388841 \t\t    0\n",
+            "5.559914 \t\t    1\n",
+            "7.0035276 \t\t    1\n",
+            "4.613308 \t\t    1\n",
+            "6.4542174 \t\t    1\n",
+            "2.9502695 \t\t    1\n",
+            "5.5484147 \t\t    1\n",
+            "6.170943 \t\t    1\n",
+            "1.442032 \t\t    1\n",
+            "7.877274 \t\t    1\n",
+            "5.6878123 \t\t    1\n",
+            "7.6754556 \t\t    1\n",
+            "4.072973 \t\t    1\n",
+            "3.2190156 \t\t    1\n",
+            "1.9020169 \t\t    1\n",
+            "7.5141115 \t\t    1\n",
+            "2.3597534 \t\t    1\n",
+            "6.5208983 \t\t    1\n",
+            "0.8700006 \t\t    1\n",
+            "2.05725 \t\t    1\n",
+            "5.65276 \t\t    1\n",
+            "-2.6381383 \t\t    0\n",
+            "3.4249375 \t\t    1\n",
+            "0.9721968 \t\t    1\n",
+            "4.518908 \t\t    1\n",
+            "-2.6458628 \t\t    0\n",
+            "-1.4011458 \t\t    0\n",
+            "4.5526175 \t\t    1\n",
+            "1.3926445 \t\t    1\n",
+            "4.7116027 \t\t    1\n",
+            "4.0929713 \t\t    1\n",
+            "5.4255376 \t\t    1\n",
+            "5.5578084 \t\t    1\n",
+            "0.7526538 \t\t    1\n",
+            "Product Name: Motorola Barrage V860 Phone (Verizon Wireless)\n",
+            "Estimated Rating: 3.922413793103448\n"
           ],
           "name": "stdout"
         }
